Fix copy (element can't be invisible)

--- a/_sass/_pmlr.scss
+++ b/_sass/_pmlr.scss
@@ -95,7 +95,9 @@ font-size:75%;
 /*** code button copy ***/
 
 .codebox {
-
+    width: 1px;
+    height: 1px;
+    border: 0;
 }
 
 .bibbutton {
